@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US004

class Collaborator {
    name
    birthdate
    admissionDate
    address
    phoneNumber
    email
    IDDocType
    number
    taxpayerNumber
}

class Skill {
    name
}

class HRM {
}


Collaborator "1" -- "*" Skill : has >
HRM "1" -- "*" Skill : assignes >
@enduml